--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	<meta name="description" content="">
+	<title>Coding Challenge</title>
+	<meta name="description" content="Project for Front-End Developer Position at VinciWorks - March 2021">
 	<meta name="author" content="Dave Pinchevski">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,700;1,200;1,300;1,400;1,700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-	<div class="square"></div>
+	<section id="what_we_do">
+		<h1>What we do</h1>
+		<p>We are on a mission to reinvent the impact that compliance tools can have. <br/>We strive to solve real compliance issues in real time whether that is training, tracking or just having the right policies and procedures in place. We want to change the status quo - that compliance is a tick-box exercise that is regarded with zero importance or relevance.  We understand that every organisation has varying compliance needs based on their staff, industry and country - that’s why we put an emphasis on relevance when it comes to all of our products.</p>
+	</section>
 </body>
 </html>
