fix for overflow-x: hidden not working on mobile; justify .general_text on smaller screens

--- a/index.html
+++ b/index.html
@@ -16,103 +16,105 @@
 	<link rel="stylesheet" media="screen and (max-width: 576px)" href="css/576.css">
 </head>
 <body>
-	<section id="what_we_do" class="fullscreen_section">
-		<h1>What we do</h1>
-		<p class="general_text">We are on a mission to reinvent the impact that compliance tools can have. We strive to solve real compliance issues in real time whether that is training, tracking or just having the right policies and procedures in place. We want to change the status quo - that compliance is a tick-box exercise that is regarded with zero importance or relevance.  We understand that every organisation has varying compliance needs based on their staff, industry and country - that’s why we put an emphasis on relevance when it comes to all of our products.</p>
-	</section>
-	<section id="how_can_we_help" class="partialscreen_section">
-		<h2>How can we help?</h2>
-		<div class="helpful_items">
-			<div class="helpful_item">
-				<div class="helpful_content">
-					<img src="assets/cap.png" />
-					<p>Training</p>
+	<div class="overflow_wrapper">
+		<section id="what_we_do" class="fullscreen_section">
+			<h1>What we do</h1>
+			<p class="general_text">We are on a mission to reinvent the impact that compliance tools can have. We strive to solve real compliance issues in real time whether that is training, tracking or just having the right policies and procedures in place. We want to change the status quo - that compliance is a tick-box exercise that is regarded with zero importance or relevance.  We understand that every organisation has varying compliance needs based on their staff, industry and country - that’s why we put an emphasis on relevance when it comes to all of our products.</p>
+		</section>
+		<section id="how_can_we_help" class="partialscreen_section">
+			<h2>How can we help?</h2>
+			<div class="helpful_items">
+				<div class="helpful_item">
+					<div class="helpful_content">
+						<img src="assets/cap.png" />
+						<p>Training</p>
+					</div>
+				</div>
+				<div class="helpful_item">
+					<div class="helpful_content">
+						<img src="assets/board.png" />
+						<p>Reporting &<br/> Tracking</p>
+					</div>
+				</div>
+				<div class="helpful_item">
+					<div class="helpful_content">
+						<img src="assets/pen.png" />
+						<p>Free Resources</p>
+					</div>
 				</div>
 			</div>
-			<div class="helpful_item">
-				<div class="helpful_content">
-					<img src="assets/board.png" />
-					<p>Reporting &<br/> Tracking</p>
+		</section>
+		<section id="what_do_our_clients_say" class="partialscreen_section">
+			<h2>What do our clients say?</h2>
+			<div class="client_container">
+				<div class="client_content">
+					<img src="assets/quote.png" />
+					<img src="assets/quote.png" />
+					<p class="quote"><em>VinciWorks’ customer service is incredible and their courses are great</em></p>
+					<hr/>
+					<p class="quote_name">David Jackson</p>
+					<p class="quote_jobtitle">Head of Compliance, DLA</p>
 				</div>
 			</div>
-			<div class="helpful_item">
-				<div class="helpful_content">
-					<img src="assets/pen.png" />
-					<p>Free Resources</p>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section id="what_do_our_clients_say" class="partialscreen_section">
-		<h2>What do our clients say?</h2>
-		<div class="client_container">
-			<div class="client_content">
-				<img src="assets/quote.png" />
-				<img src="assets/quote.png" />
-				<p class="quote"><em>VinciWorks’ customer service is incredible and their courses are great</em></p>
-				<hr/>
-				<p class="quote_name">David Jackson</p>
-				<p class="quote_jobtitle">Head of Compliance, DLA</p>
-			</div>
-		</div>
-	</section>
-	<section id="our_story" class="fullscreen_section">
-		<h2>Our Story</h2>
-		<p class="general_text">We are on a mission to reinvent the impact that compliance tools can have. We strive to solve real compliance issues in real time whether that is training, tracking or just having the right policies and procedures in place. We want to change the status quo - that compliance is a tick-box exercise that is regarded with zero importance or relevance. We understand that every organisation has varying compliance needs based on their staff, industry and country - that’s why we put an emphasis on relevance when it comes to all of our products.</p>
-	</section>
-	<section id="meet_the_team" class="fullscreen_section">
-		<h2>Meet the team</h2>
-	  <ul class="grid">
-	    <li>
-	        <img src="assets/image 2.png" alt="">
-	        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
-	    </li>
-	    <li>
-	        <img src="assets/image 3.png" alt="">
-	        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
-	    </li>
-	    <li>
-	        <img src="assets/image 4.png" alt="">
-	        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
-	    </li>
-	    <li>
-	        <img src="assets/image 5.png" alt="">
-	        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
-	    </li>
-	    <li>
-	        <img src="assets/image 6.png" alt="">
-	        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
-	    </li>
-	    <li>
-	        <img src="assets/image 7.png" alt="">
-	        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
-	    </li>
-	    <li>
-	        <img src="assets/image 8.png" alt="">
-	        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
-	    </li>
-	    <li>
-	        <img src="assets/image 9.png" alt="">
-	        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
-	    </li>
-	    <li>
-	        <img src="assets/image 10.png" alt="">
-	        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
-	    </li>
-	    <li>
-	        <img src="assets/image 11.png" alt="">
-	        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
-	    </li>
-	    <li>
-	        <img src="assets/image 12.png" alt="">
-	        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
-	    </li>
-	    <li>
-	        <img src="assets/image 13.png" alt="">
-	        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
-	    </li>
-	  </ul>
-	</section>
+		</section>
+		<section id="our_story" class="fullscreen_section">
+			<h2>Our Story</h2>
+			<p class="general_text">We are on a mission to reinvent the impact that compliance tools can have. We strive to solve real compliance issues in real time whether that is training, tracking or just having the right policies and procedures in place. We want to change the status quo - that compliance is a tick-box exercise that is regarded with zero importance or relevance. We understand that every organisation has varying compliance needs based on their staff, industry and country - that’s why we put an emphasis on relevance when it comes to all of our products.</p>
+		</section>
+		<section id="meet_the_team" class="fullscreen_section">
+			<h2>Meet the team</h2>
+		  <ul class="grid">
+		    <li>
+		        <img src="assets/image 2.png" alt="">
+		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		    </li>
+		    <li>
+		        <img src="assets/image 3.png" alt="">
+		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		    </li>
+		    <li>
+		        <img src="assets/image 4.png" alt="">
+		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		    </li>
+		    <li>
+		        <img src="assets/image 5.png" alt="">
+		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		    </li>
+		    <li>
+		        <img src="assets/image 6.png" alt="">
+		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		    </li>
+		    <li>
+		        <img src="assets/image 7.png" alt="">
+		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		    </li>
+		    <li>
+		        <img src="assets/image 8.png" alt="">
+		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		    </li>
+		    <li>
+		        <img src="assets/image 9.png" alt="">
+		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		    </li>
+		    <li>
+		        <img src="assets/image 10.png" alt="">
+		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		    </li>
+		    <li>
+		        <img src="assets/image 11.png" alt="">
+		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		    </li>
+		    <li>
+		        <img src="assets/image 12.png" alt="">
+		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		    </li>
+		    <li>
+		        <img src="assets/image 13.png" alt="">
+		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		    </li>
+		  </ul>
+		</section>
+	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
