more mobile layout tweaks

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" media="screen and (max-width: 1320px)" href="css/1320.css">
 	<link rel="stylesheet" media="screen and (max-width: 1200px)" href="css/1200.css">
 	<link rel="stylesheet" media="screen and (max-width: 992px)" href="css/992.css">
 	<link rel="stylesheet" media="screen and (max-width: 768px)" href="css/768.css">
