Add names to meet_the_team; Shorten scrollTrigger duration;

--- a/index.html
+++ b/index.html
@@ -67,51 +67,51 @@
 		  <ul class="grid">
 		    <li>
 		        <img src="assets/image 2.png" alt="">
-		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		        <span class="description"><strong>Josh Goodhardt</strong><br/>COO</span>
 		    </li>
 		    <li>
 		        <img src="assets/image 3.png" alt="">
-		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		        <span class="description"><strong>Yehuda Solomont</strong><br/>Courses Manager</span>
 		    </li>
 		    <li>
 		        <img src="assets/image 4.png" alt="">
-		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		        <span class="description"><strong>Alyssa Redsun</strong><br/>Courses Manager</span>
 		    </li>
 		    <li>
 		        <img src="assets/image 5.png" alt="">
-		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		        <span class="description"><strong>Deena Kapiloff</strong><br/>Courses Designer</span>
 		    </li>
 		    <li>
 		        <img src="assets/image 6.png" alt="">
-		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		        <span class="description"><strong>Ronit Rotsztejn</strong><br/>Courses Designer</span>
 		    </li>
 		    <li>
 		        <img src="assets/image 7.png" alt="">
-		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		        <span class="description"><strong>Rafi Miller</strong><br/>Courses Developer</span>
 		    </li>
 		    <li>
 		        <img src="assets/image 8.png" alt="">
-		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		        <span class="description"><strong>Dave Pinchevski</strong><br/>Courses Developer</span>
 		    </li>
 		    <li>
 		        <img src="assets/image 9.png" alt="">
-		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		        <span class="description"><strong>Pip Johnson</strong><br/>Sales</span>
 		    </li>
 		    <li>
 		        <img src="assets/image 10.png" alt="">
-		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		        <span class="description"><strong>Sharon Cahn</strong><br/>Sales</span>
 		    </li>
 		    <li>
 		        <img src="assets/image 11.png" alt="">
-		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		        <span class="description"><strong>Sandy Erez</strong><br/>Sales</span>
 		    </li>
 		    <li>
 		        <img src="assets/image 12.png" alt="">
-		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		        <span class="description"><strong>Emily Jaffe</strong><br/>Customer Support</span>
 		    </li>
 		    <li>
 		        <img src="assets/image 13.png" alt="">
-		        <span class="description"><strong>Josh Goodhardt</strong><br/>CEO</span>
+		        <span class="description"><strong>Evan Gadol</strong><br/>Customer Support</span>
 		    </li>
 		  </ul>
 		</section>
