inbal birthday wordle poem reveal game - initial draft

--- a/index.html
+++ b/index.html
@@ -1,120 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>VinciWorks Coding Challenge</title>
-	<meta name="description" content="Project for Front-End Developer Position at VinciWorks - April 2021">
-	<meta name="author" content="Dave Pinchevski">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" media="screen and (max-width: 1320px)" href="css/1320.css">
-	<link rel="stylesheet" media="screen and (max-width: 1200px)" href="css/1200.css">
-	<link rel="stylesheet" media="screen and (max-width: 992px)" href="css/992.css">
-	<link rel="stylesheet" media="screen and (max-width: 768px)" href="css/768.css">
-	<link rel="stylesheet" media="screen and (max-width: 576px)" href="css/576.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Poem Reveal</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<div class="overflow_wrapper">
-		<section id="how_can_we_help" class="partialscreen_section">
-			<h2>How can we help?</h2>
-			<div class="helpful_items">
-				<div class="helpful_item">
-					<div class="helpful_content">
-						<img src="assets/cap.png" />
-						<p>Training</p>
-					</div>
-				</div>
-				<div class="helpful_item">
-					<div class="helpful_content">
-						<img src="assets/board.png" />
-						<p>Reporting &<br/> Tracking</p>
-					</div>
-				</div>
-				<div class="helpful_item">
-					<div class="helpful_content">
-						<img src="assets/pen.png" />
-						<p>Free Resources</p>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section id="what_do_our_clients_say" class="partialscreen_section">
-			<h2>What do our clients say?</h2>
-			<div class="client_container">
-				<div class="client_content">
-					<img src="assets/quote.png" />
-					<img src="assets/quote.png" />
-					<p class="quote"><em>VinciWorks’ customer service is incredible and their courses are great</em></p>
-					<hr/>
-					<p class="quote_name">David Jackson</p>
-					<p class="quote_jobtitle">Head of Compliance, DLA</p>
-				</div>
-			</div>
-		</section>
-		<section id="our_story" class="fullscreen_section">
-			<h2>Our Story</h2>
-			<p class="general_text">We are on a mission to reinvent the impact that compliance tools can have. We strive to solve real compliance issues in real time whether that is training, tracking or just having the right policies and procedures in place. We want to change the status quo - that compliance is a tick-box exercise that is regarded with zero importance or relevance. We understand that every organisation has varying compliance needs based on their staff, industry and country - that’s why we put an emphasis on relevance when it comes to all of our products.</p>
-		</section>
-		<section id="meet_the_team" class="fullscreen_section">
-			<h2>Meet the team</h2>
-		  <ul class="grid">
-		    <li>
-		        <img src="assets/image 2.png" alt="">
-		        <span class="description"><strong>Josh Goodhardt</strong><br/>COO</span>
-		    </li>
-		    <li>
-		        <img src="assets/image 3.png" alt="">
-		        <span class="description"><strong>Yehuda Solomont</strong><br/>Courses Manager</span>
-		    </li>
-		    <li>
-		        <img src="assets/image 4.png" alt="">
-		        <span class="description"><strong>Alyssa Redsun</strong><br/>Courses Manager</span>
-		    </li>
-		    <li>
-		        <img src="assets/image 5.png" alt="">
-		        <span class="description"><strong>Deena Kapiloff</strong><br/>Courses Designer</span>
-		    </li>
-		    <li>
-		        <img src="assets/image 6.png" alt="">
-		        <span class="description"><strong>Ronit Rotsztejn</strong><br/>Courses Designer</span>
-		    </li>
-		    <li>
-		        <img src="assets/image 7.png" alt="">
-		        <span class="description"><strong>Rafi Miller</strong><br/>Courses Developer</span>
-		    </li>
-		    <li>
-		        <img src="assets/image 8.png" alt="">
-		        <span class="description"><strong>Dave Pinchevski</strong><br/>Courses Developer</span>
-		    </li>
-		    <li>
-		        <img src="assets/image 9.png" alt="">
-		        <span class="description"><strong>Pip Johnson</strong><br/>Sales</span>
-		    </li>
-		    <li>
-		        <img src="assets/image 10.png" alt="">
-		        <span class="description"><strong>Sharon Cahn</strong><br/>Sales</span>
-		    </li>
-		    <li>
-		        <img src="assets/image 11.png" alt="">
-		        <span class="description"><strong>Sandy Erez</strong><br/>Sales</span>
-		    </li>
-		    <li>
-		        <img src="assets/image 12.png" alt="">
-		        <span class="description"><strong>Emily Jaffe</strong><br/>Customer Support</span>
-		    </li>
-		    <li>
-		        <img src="assets/image 13.png" alt="">
-		        <span class="description"><strong>Evan Gadol</strong><br/>Customer Support</span>
-		    </li>
-		  </ul>
-		</section>
-	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
-	<script src="./js/main.js"></script>
+    <div class="container">
+        <h1>❤️ Happy Birthday, Inbal! ❤️</h1>
+        <p>Enter the answer from the Wordle link below to reveal your birthday poem.</p>
+        <p id="updateMsg">The Wordle link has been updated.</p>
+        <a target="_blank" id="wordleArchiveLink" href="https://wordlearchive.com/989">Wordle Archive Link</a>
+        <input type="text" id="keywordInput" placeholder="Enter passphrase">
+        <div id="poemContainer">
+            <p>For Inbal—</p>
+        </div>
+    </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
