moved input below poem

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="container">
         <h1>❤️ Happy Birthday, Inbal! ❤️</h1>
-        <p>Enter the answer from the Wordle link below to reveal your birthday poem.</p>
+        <p>Enter the answer from the Wordle link below to reveal the next line of your birthday poem.</p>
         <p id="updateMsg">The Wordle link has been updated.</p>
         <a target="_blank" id="wordleArchiveLink" href="https://wordlearchive.com/989">Wordle Archive Link</a>
-        <input type="text" id="keywordInput" placeholder="Enter passphrase">
         <div id="poemContainer">
             <p>For Inbal—</p>
         </div>
+        <input type="text" id="keywordInput" placeholder="Enter passphrase">
     </div>
     <script src="js/main.js"></script>
 </body>
