--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
         <input type="text" id="keywordInput" placeholder="Enter passphrase">
     </div>
     <script src="js/main.js"></script>
+    <script type="module">
+        import confetti from 'https://cdn.skypack.dev/canvas-confetti';
+        confetti();
+    </script>
 </body>
 </html>
