--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
         <p id="updateMsg">The Wordle link has been updated.</p>
         <a target="_blank" id="wordleArchiveLink" href="https://wordlearchive.com/989">Wordle Archive Link</a>
         <div id="poemContainer">
-            <p>For Inbal—</p>
+            <h4>For Inbal—</h4>
         </div>
         <input type="text" id="keywordInput" placeholder="Enter passphrase">
     </div>
+    <button id="skipToEnd">Skip to End</button>
     <script src="js/main.js"></script>
     <script type="module">
         import confetti from 'https://cdn.skypack.dev/canvas-confetti';
