--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         </div>
         <input type="text" id="keywordInput" placeholder="Enter passphrase">
     </div>
-    <button id="skipToEnd">Skip to End</button>
+    <div class="skipBtnContainer">
+        <button id="skipToNext">Skip to Next</button>    
+        <button id="skipToEnd">Skip to End</button>
+    </div>
     <script src="js/main.js"></script>
     <script type="module">
         import confetti from 'https://cdn.skypack.dev/canvas-confetti';
