--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>❤️ Happy Birthday, Inbal! ❤️</h1>
-        <p>Enter the answer from the Wordle link below to reveal the next line of your birthday poem.</p>
-        <p id="updateMsg">The Wordle link has been updated.</p>
-        <a target="_blank" id="wordleArchiveLink" href="https://wordlearchive.com/989">Wordle Archive Link</a>
+        <h1>Happy Birthday!!!</h1>
+        <h2>❤️🎉❤️🎉❤️</h2>
+        <p id="instructions">Enter the answer from the Wordle Puzzle to reveal the next line of your birthday poem.</p>
+        <p id="updateMsg">The Wordle Puzzle has been updated. Play again for the next line!</p>
+        <a target="_blank" id="wordleArchiveLink" href="https://wordlearchive.com/989">
+            <button>Play Wordle</button>
+        </a>
         <div id="poemContainer">
             <h4>For Inbal—</h4>
         </div>
-        <input type="text" id="keywordInput" placeholder="Enter passphrase">
+        <input type="text" id="keywordInput" placeholder="Enter the next Wordle solution here!">
     </div>
     <div class="skipBtnContainer">
         <button id="skipToNext">Skip to Next</button>    
