--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Happy Birthday!!!</h1>
         <h2>❤️🎉❤️🎉❤️</h2>
         <p id="instructions">Enter the answer from the Wordle Puzzle to reveal the next line of your birthday poem.</p>
-        <p id="updateMsg">The Wordle Puzzle has been updated. Play again for the next line!</p>
+        <p id="updateMsg">The Wordle Puzzle has been updated.<br/>Play again for the next line!</p>
         <a target="_blank" id="wordleArchiveLink" href="https://wordlearchive.com/989">
             <button>Play Wordle</button>
         </a>
