embeded youtube video of song

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <button id="skipToNext">Skip to Next</button>    
         <button id="skipToEnd">Skip to End</button>
     </div>
+    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/O-tyhrZKTZc?si=hIRb-FLKsLrZWgji" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <script src="js/main.js"></script>
     <script type="module">
         import confetti from 'https://cdn.skypack.dev/canvas-confetti';
